mule-user-guide/v/3.6/consuming-a-soap-api.adoc
= Consuming a SOAP API
:keywords: anypoint, studio, connectors, soap, wsdl, api

If the API that you wish to consume does not already have its own Anypoint Connector, use the new *Web Service Consumer* to easily consume any SOAP API from within your Mule application. Access the **link:https://docs.mulesoft.com/mule-user-guide/v/3.6/web-service-consumer[Web Service Consumer documentation]** to learn more.

Using the information contained in the API's WSDL, this connector enables you to configure a few details in order to establish the connection you need to consume a service from within your Mule application. First, identify the location of the Web service's WSDL file, then ask the Web Service Consumer to configure itself from the WSDL – host, port, address. 

== See Also

* Using an older version of Mule that doesn't support the Web Service Consumer? Access details about the link:https://docs.mulesoft.com/mule-user-guide/v/3.6/cxf-module-reference[CXF Module] in Mule.
