mule-user-guide/v/3.8/consuming-a-soap-api.adoc
= Consuming a SOAP API
:keywords: anypoint, studio, connectors, soap, wsdl, api

If the API that you want to consume does not already have its own Anypoint Connector, use the new *Web Service Consumer* to consume any SOAP API from within your Mule application. Access the **link:/mule-user-guide/v/3.8/web-service-consumer[Web Service Consumer documentation]** to learn more.

Using the information contained in the API's WSDL, this connector enables you to configure a few details to establish the connection you need for consuming a service from within your Mule application. First, identify the location of the Web service's WSDL file, then ask the Web Service Consumer to configure itself from the WSDL – host, port, address. 

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
